src/test/resources/valid_tests/GroupTest.cnna
architecture GroupTest{
    def input in1[2]
    def input in2
    def output out

    group 1..2{
        in1[] ->
        fullyConnected(units = 64)
        activation.sigmoid()
    }
    group 3{
        in2 ->
    }
    merge concatenate()
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}