src/test/resources/invalid_tests/OverlappingGroupTest.cnna
architecture OverlappingGroupTest{
    def input in
    def output out

    in ->
    group 1..3{
        fullyConnected(units=128)
    }
    group 2{
        fullyConnected(units=128)
    }
    merge concatenate()
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}